# ANN-string-indexes

./: .gitignore  .gitmodules  README.md  models.py  run_testALL.sh  test.py  train.py
ANN/: README.md  run_testALL.sh  run_trainALL.sh  train.py  utils.py
FST/: CMakeLists.txt  README.md  benchmark.cpp  fst_mod.hpp  utils.hpp
pretrained_models/: GeoNames_truncated20.txt.bin.SMLP.step2.bs150nh[20, 50].enr0.0.times.0.h5  GeoNames_truncated20.txt.ohe.LSTM.bs150nh[20, 20, 50].enr0.0005.times.20.h5  GeoNames_truncated20.txt.ohe.SMLP.step10.bs150nh[50, 50].enr0.0005_stepvar_0.times.20.h5  GeoNames_truncated20.txt.ohe.SMLP.step2.bs150nh[20, 50].enr0.0005_stepvar_0.times.20.h5  GeoNames_truncated20.txt.ohe.SMLP.step5.bs150nh[50, 50].enr0.0005_stepvar_0.times.20.h5  GeoNames_truncated20.txt.ohe.biLSTM.bs150nh[20, 20, 50].enr0.0005.times.20.h5  az-words_truncated20.txt.ohe.CNN.bs75nh[50, 50].enr0.0005.times.20.h5  az-words_truncated20.txt.ohe.LSTM_multi.bs75nh[20, 20, 50].enr0.0005.times.20.h5  az-words_truncated20.txt.ohe.SMLP.step0.bs75nh[20, 50].enr0.0005_stepvar_0.times.20.h5  az-words_truncated20.txt.ohe.SMLP.step10.bs75nh[100, 50].enr0.0_stepvar_0.times.0.h5  az-words_truncated20.txt.ohe.SMLP.step10.bs75nh[50, 50].enr0.0_stepvar_0.times.0.h5  az-words_truncated20.txt.ohe.SMLP.step5.bs75nh[50, 50].enr0.0005_stepvar_0.times.20.h5  az-words_truncated20.txt.ohe.SMLP_CNN.bs75nh[50, 50].enr0.0005_stepvar_0.times.20.h5  dna-k-mer.txt.ohe.LSTM.bs300nh[20, 20, 50].enr0.0005.times.20.h5  dna-k-mer.txt.ohe.MLP.bs300nh[50, 50].enr0.0005.times.20.h5  (+12 more)
results/: FST server results.csv  (+2 more)
(+27 files in other folders)
